src/objects/General_Sub_Task__c.object
<CustomObject>
    <fields>
        <fullName>Action_Plan_Status__c</fullName>
        <label>Action Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Against__c</fullName>
        <label>Against</label>
        <picklist>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TEXT( TODAY()  -  DATEVALUE( CreatedDate ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Completed__c</fullName>
        <label>Approval Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assign_User__c</fullName>
        <formula>Assigned_User__r.LastName &amp; &quot;,&quot; &amp; Assigned_User__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Disposition_Qty__c</fullName>
        <label>Assigned Disposition Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Role__c</fullName>
        <label>Assigned Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Child_Dispositions_Section</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Root_Cause_Name__c</fullName>
        <label>Associated Root Cause Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Associated_Root_Causes__c</fullName>
        <label>Associated Root Causes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capa__c</fullName>
        <formula>General_Task__r.CAPA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause_Code_Description__c</fullName>
        <label>Cause Code Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cause_Code_Name__c</fullName>
        <formula>Cause_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cause Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cause Code</label>
        <referenceTo>Cause__c</referenceTo>
        <relationshipLabel>Root Causes</relationshipLabel>
        <relationshipName>Task_Root_Causes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Management__c</fullName>
        <formula>General_Task__r.Change_Management__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Management</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <label>Complete?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_By_Name__c</fullName>
        <formula>Completed_By__r.LastName &amp; &quot;, &quot; &amp;  Completed_By__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Child_General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <label>Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completion_Comment__c</fullName>
        <label>Completion Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Comments__c</fullName>
        <label>Completion Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Correction_Statement__c</fullName>
        <label>Correction Statement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Defect_Description__c</fullName>
        <label>Defect Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Defect_Name__c</fullName>
        <formula>Defect__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defect</label>
        <referenceTo>Defect__c</referenceTo>
        <relationshipLabel>Root Causes</relationshipLabel>
        <relationshipName>Task_Root_Causes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Disposition_Instruction__c</fullName>
        <label>Disposition Instruction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Disposition_Type_Status__c</fullName>
        <label>Disposition Type Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disposition_Type__c</fullName>
        <label>Disposition Type</label>
        <picklist>
            <picklistValues>
                <fullName>REWORK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCRAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USE AS IS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Task_Name__c</fullName>
        <formula>General_Task__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>General Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Task</label>
        <referenceTo>General_Task__c</referenceTo>
        <relationshipLabel>General Sub Tasks</relationshipLabel>
        <relationshipName>General_Sub_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Conformance_Number__c</fullName>
        <formula>General_Task__r.Non_Conformance__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Conformance Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Conformance_Owner__c</fullName>
        <formula>General_Task__r.NonConformanceName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Conformance Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Conformance__c</fullName>
        <description>Non_Conformance id used in chronology</description>
        <formula>General_Task__r.Non_Conformance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Conformance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Task__c</fullName>
        <formula>General_Task__r.Record_Type_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pend_Save_ActionPlan__c</fullName>
        <label>Pend Save ActionPlan</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_Statement__c</fullName>
        <label>Plan Statement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <formula>Process__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Root Causes</relationshipLabel>
        <relationshipName>Task_Root_Causes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Root Causes</relationshipLabel>
        <relationshipName>Task_Root_Causes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Statement__c</fullName>
        <label>Statement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sub_Task_Detail__c</fullName>
        <label>Sub Task Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submit_WithOut_Approval__c</fullName>
        <label>Submit WithOut Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preventive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>General Sub Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GSR-{00000}</displayFormat>
        <label>General Sub Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>General Sub Tasks</pluralLabel>
    <recordTypes>
        <fullName>Action_Plan</fullName>
        <active>true</active>
        <label>Action Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>AdhocTask_Actions</fullName>
        <active>true</active>
        <label>AdhocTask Actions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Containment_Actions</fullName>
        <active>true</active>
        <description>Child task for Containment</description>
        <label>Containment Actions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Disposition_Section</fullName>
        <active>true</active>
        <label>Disposition Section</label>
    </recordTypes>
    <recordTypes>
        <fullName>Root_Cause</fullName>
        <active>true</active>
        <label>Root Cause</label>
    </recordTypes>
    <recordTypes>
        <fullName>Verification_Plans</fullName>
        <active>true</active>
        <label>Verification Plans</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>